--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,15 +1,17 @@
 .layout {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   height: 100vh;
 }
 
 .body {
   width: 100vw;
-  height: 100%;
+  flex: 1;
   display: flex;
   flex-direction: row;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .body > :first-child {
